fixing overflow in the main view

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -128,6 +128,8 @@ body,html {
 .app__view {
   position: absolute;
   width: 100%;
+  height: 100%;
+  overflow: auto;
   padding: 0 1%;
   &--main {
     line-height: 1.6;
